kubernetes/nodeExporter.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: prometheus-node-exporter
  namespace: monitoring
  labels:
    k8s-app: prometheus-node-exporter
spec:
  selector:
    matchLabels:
      k8s-app: prometheus-node-exporter
  template:
    metadata:
      labels:
        k8s-app: prometheus-node-exporter
    spec:
      serviceAccountName: prometheus-node-exporter
      hostNetwork: true
      containers:
        - name: prometheus-node-exporter
          image: quay.io/prometheus/node-exporter:v1.2.2
          ports:
            - name: http
              containerPort: 9100
          resources:
            limits:
              memory: 128Mi
            requests:
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-node-exporter
  namespace: monitoring
  labels:
    k8s-app: prometheus-node-exporter
spec:
  selector:
    k8s-app: prometheus-node-exporter
  type: NodePort
  ports:
    - name: http
      port: 9100
      targetPort: 9100
      nodePort: 30910
